@@ -249,6 +249,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added js variable wgCurRevisionId to the output
 * Added js variable wgOldId which shows the oldid when viewing an old revision
 * (bug 8141) Cleanup of Parser::doTableStuff, patch by AzaTht
+* (bug 8042) Make miser mode caching limits settable via $wgQueryCacheLimit
+  instead of hardcoding to 1000
+* Avoid notice when contribs query page class is instantiated in batch mode
+
 
 == Languages updated ==
 
